--- a/src/main/resources/cordinus/cordinus_global/AppointmentScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/AppointmentScreen.fxml
@@ -38,10 +38,10 @@
       </TableView>
       <HBox alignment="CENTER" layoutX="298.0" layoutY="323.0" prefHeight="56.0" prefWidth="306.0" spacing="15.0">
          <children>
-            <Button fx:id="OnAddAppt" mnemonicParsing="false" onAction="#OnAddAppt" prefHeight="25.0" prefWidth="62.0" text="ADD" />
-            <Button mnemonicParsing="false" onAction="#OnUpdateAppt" text="UPDATE" />
-            <Button mnemonicParsing="false" onAction="#OnDeleteAppt" text="DELETE" />
-            <Button layoutX="17.0" layoutY="26.0" mnemonicParsing="false" onAction="#MainMenuReturn" text="BACK" />
+            <Button fx:id="OnAddAppt" mnemonicParsing="false" onAction="#onAddAppt" prefHeight="25.0" prefWidth="62.0" text="ADD" />
+            <Button mnemonicParsing="false" onAction="#onUpdateAppt" text="UPDATE" />
+            <Button mnemonicParsing="false" onAction="#onDeleteAppt" text="DELETE" />
+            <Button layoutX="17.0" layoutY="26.0" mnemonicParsing="false" onAction="#mainMenuReturn" text="BACK" />
          </children>
       </HBox>
       <Label alignment="CENTER" layoutX="315.0" layoutY="13.0" prefHeight="56.0" prefWidth="251.0" text="APPOINTMENTS">
