--- a/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
@@ -72,11 +72,11 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="510.0" prefWidth="997.0" style="-fx-background-color: #000;">
                      <children>
-                        <SplitPane dividerPositions="0.13165829145728644" prefHeight="450.0" prefWidth="997.0">
+                        <SplitPane dividerPositions="0.1628140703517588" prefHeight="450.0" prefWidth="997.0">
                           <items>
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="448.0" prefWidth="134.0" style="-fx-background-color: #000;">
                                  <children>
-                                    <ComboBox fx:id="ContactComboBox" layoutX="8.0" layoutY="33.0" prefHeight="25.0" prefWidth="111.0" />
+                                    <ComboBox fx:id="ContactComboBox" layoutX="8.0" layoutY="33.0" prefHeight="25.0" prefWidth="133.0" />
                                     <Label layoutX="8.0" layoutY="6.0" text="Select Contact " textFill="WHITE">
                                        <font>
                                           <Font name="System Bold Italic" size="12.0" />
@@ -87,16 +87,16 @@
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #000;" />
                           </items>
                         </SplitPane>
-                        <TableView fx:id="reportContactsTable" layoutX="163.0" layoutY="29.0" prefHeight="382.0" prefWidth="803.0" style="-fx-background-color: #313639;">
+                        <TableView fx:id="reportContactsTable" layoutX="178.0" layoutY="29.0" prefHeight="382.0" prefWidth="788.0" style="-fx-background-color: #313639;">
                            <columns>
                               <TableColumn fx:id="Appointment_ID" prefWidth="75.0" text="Appt. ID" />
                               <TableColumn fx:id="Title" prefWidth="75.0" text="Title" />
                               <TableColumn fx:id="Description" prefWidth="75.0" text="Description" />
-                              <TableColumn fx:id="Type" prefWidth="113.0" text="Type" />
-                              <TableColumn fx:id="Start" minWidth="8.0" prefWidth="128.0" text="Start" />
-                              <TableColumn fx:id="End" prefWidth="132.0" text="End" />
-                              <TableColumn fx:id="Customer_ID" prefWidth="86.0" text="Cust. ID" />
-                              <TableColumn fx:id="Contact_ID" prefWidth="86.0" text="Contact" />
+                              <TableColumn fx:id="Type" prefWidth="99.0" text="Type" />
+                              <TableColumn fx:id="Start" minWidth="8.0" prefWidth="132.0" text="Start" />
+                              <TableColumn fx:id="End" prefWidth="131.0" text="End" />
+                              <TableColumn fx:id="Customer_ID" prefWidth="96.0" text="Customer  ID" />
+                              <TableColumn fx:id="Contact_ID" prefWidth="104.0" text="Contact ID" />
                            </columns>
                         </TableView>
                         <HBox alignment="CENTER" layoutX="415.0" layoutY="-36.0" prefHeight="100.0" prefWidth="339.0" spacing="10.0">
