--- a/src/main/resources/cordinus/cordinus_global/AddAppt.fxml
+++ b/src/main/resources/cordinus/cordinus_global/AddAppt.fxml
@@ -1,17 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="449.0" prefWidth="747.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.AddApptController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="449.0" prefWidth="747.0" style="-fx-background-color: #C4A484;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.AddApptController">
    <children>
       <GridPane layoutX="171.0" layoutY="84.0" prefHeight="219.0" prefWidth="425.0" vgap="10.0">
         <columnConstraints>
@@ -32,14 +24,14 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label prefHeight="17.0" prefWidth="114.0" text="Appointment ID" />
-            <Label text="Title" GridPane.rowIndex="3" />
-            <Label text="Description" GridPane.rowIndex="4" />
-            <Label text="Location" GridPane.rowIndex="5" />
-            <Label text="Contact ID &amp; Name" GridPane.rowIndex="8" />
-            <Label text="Type" GridPane.rowIndex="9" />
-            <Label text="Start Time" GridPane.rowIndex="6" />
-            <Label text="End Time" GridPane.rowIndex="7" />
+            <Label fx:id="appointmentIDLbl" prefHeight="17.0" prefWidth="114.0" text="Appointment ID" />
+            <Label fx:id="titleLbl" text="Title" GridPane.rowIndex="3" />
+            <Label fx:id="descriptionLbl" text="Description" GridPane.rowIndex="4" />
+            <Label fx:id="locationLbl" text="Location" GridPane.rowIndex="5" />
+            <Label fx:id="contactLbl" text="Contact ID &amp; Name" GridPane.rowIndex="8" />
+            <Label fx:id="typeLbl" text="Type" GridPane.rowIndex="9" />
+            <Label fx:id="startTimeLbl" text="Start Time" GridPane.rowIndex="6" />
+            <Label fx:id="endTimeLbl" text="End Time" GridPane.rowIndex="7" />
             <TextField fx:id="ApptIDTxt" disable="true" opacity="0.34" GridPane.columnIndex="1" />
             <TextField fx:id="TitleTxt" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <TextField fx:id="DescriptionTxt" GridPane.columnIndex="1" GridPane.rowIndex="4" />
@@ -47,9 +39,9 @@
             <TextField fx:id="ContactTxt" disable="true" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="8" />
             <DatePicker fx:id="StartDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="6" />
             <DatePicker fx:id="EndDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-            <Label text="Customer ID" GridPane.rowIndex="2" />
-            <Label text="User ID" GridPane.rowIndex="1" />
-            <TextField fx:id="CustomerIDTxt" onAction="#updateCustomerName" disable="true" editable="false" opacity="0.34" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label fx:id="customerIDLbl" text="Customer ID" GridPane.rowIndex="2" />
+            <Label fx:id="userIDLbl" text="User ID" GridPane.rowIndex="1" />
+            <TextField fx:id="CustomerIDTxt" disable="true" editable="false" onAction="#updateCustomerName" opacity="0.34" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <TextField fx:id="UserIDTxt" disable="true" editable="false" opacity="0.34" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <ComboBox fx:id="StartTimeCombo" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="6" />
             <ComboBox fx:id="EndTimeCombo" prefWidth="150.0" GridPane.columnIndex="2" GridPane.rowIndex="7" />
@@ -61,8 +53,8 @@
       </GridPane>
       <HBox alignment="CENTER" layoutX="283.0" layoutY="349.0" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
          <children>
-            <Button mnemonicParsing="false" onAction="#insertAppt" text="Add" />
-            <Button mnemonicParsing="false" onAction="#apptScreenReturn" text="Back" />
+            <Button fx:id="addBtn" mnemonicParsing="false" onAction="#insertAppt" text="Add" />
+            <Button fx:id="backBtn" mnemonicParsing="false" onAction="#apptScreenReturn" text="Back" />
          </children>
       </HBox>
    </children>
