--- a/src/main/resources/cordinus/cordinus_global/MainMenu.fxml
+++ b/src/main/resources/cordinus/cordinus_global/MainMenu.fxml
@@ -9,10 +9,10 @@
          <children>
             <VBox layoutX="155.0" layoutY="15.0" prefHeight="323.0" prefWidth="250.0" spacing="50.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#appointmentScreenButton" prefHeight="50.0" prefWidth="251.0" text="Appointments" />
-                  <Button mnemonicParsing="false" onAction="#customerScreenButton" prefHeight="50.0" prefWidth="250.0" text="Customers" />
-                  <Button mnemonicParsing="false" onAction="#reportScreenButton" prefHeight="50.0" prefWidth="252.0" text="Reports" />
-                  <Button mnemonicParsing="false" onAction="#loginScreenButton" prefHeight="50.0" prefWidth="254.0" text="Back" />
+                  <Button fx:id="appointmentsButton" mnemonicParsing="false" onAction="#appointmentScreenButton" prefHeight="50.0" prefWidth="251.0" text="Appointments" />
+                  <Button fx:id="customersButton" mnemonicParsing="false" onAction="#customerScreenButton" prefHeight="50.0" prefWidth="250.0" text="Customers" />
+                  <Button fx:id="reportsButton" mnemonicParsing="false" onAction="#reportScreenButton" prefHeight="50.0" prefWidth="252.0" text="Reports" />
+                  <Button fx:id="backButton" mnemonicParsing="false" onAction="#loginScreenButton" prefHeight="50.0" prefWidth="254.0" text="Back" />
                </children>
             </VBox>
          </children>
