--- a/src/main/resources/cordinus/cordinus_global/ModCust.fxml
+++ b/src/main/resources/cordinus/cordinus_global/ModCust.fxml
@@ -31,28 +31,28 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label text="Customer Name:" />
-                  <Label layoutX="10.0" layoutY="17.0" text="Address:" GridPane.rowIndex="1" />
-                  <Label layoutX="10.0" layoutY="47.0" text="Postal Code:" GridPane.rowIndex="2" />
-                  <Label layoutX="10.0" layoutY="77.0" text="Phone Number:" GridPane.rowIndex="3" />
-                  <Label layoutX="10.0" layoutY="17.0" text="Customer ID:" GridPane.rowIndex="4" />
+                  <Label fx:id="customerNameLbl" text="Customer Name:" />
+                  <Label fx:id="addressLbl" layoutX="10.0" layoutY="17.0" text="Address:" GridPane.rowIndex="1" />
+                  <Label fx:id="postalCodeLbl" layoutX="10.0" layoutY="47.0" text="Postal Code:" GridPane.rowIndex="2" />
+                  <Label fx:id="phoneLbl" layoutX="10.0" layoutY="77.0" text="Phone Number:" GridPane.rowIndex="3" />
+                  <Label fx:id="customerIDLbl" layoutX="10.0" layoutY="17.0" text="Customer ID:" GridPane.rowIndex="4" />
                   <TextField fx:id="Customer_Name" GridPane.columnIndex="1" />
                   <TextField fx:id="AddressTxt" layoutX="277.0" layoutY="13.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   <TextField fx:id="Postal_Code" layoutX="277.0" layoutY="43.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                   <TextField fx:id="Phone" layoutX="277.0" layoutY="73.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                   <TextField fx:id="Customer_ID" disable="true" editable="false" layoutX="277.0" layoutY="103.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                  <Label text="Division ID:" GridPane.rowIndex="5" />
+                  <Label fx:id="divisionIDLbl" text="Division ID:" GridPane.rowIndex="5" />
                   <TextField fx:id="Division_ID" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                  <Label text="Country:" GridPane.rowIndex="6" />
-                  <Label text="State/Province" GridPane.rowIndex="7" />
+                  <Label fx:id="countryLbl" text="Country:" GridPane.rowIndex="6" />
+                  <Label fx:id="stateLbl" text="State/Province" GridPane.rowIndex="7" />
                   <ComboBox fx:id="CountriesComboBox" onAction="#onActionSelectCountry" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                   <ComboBox fx:id="StatesComboBox" onAction="#statesSelect" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
                </children>
             </GridPane>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#modifyCustomer" text="Modify" />
-                  <Button mnemonicParsing="false" onAction="#customerScreenButton" text="Back" />
+                  <Button fx:id="modBtn" mnemonicParsing="false" onAction="#modifyCustomer" text="Modify" />
+                  <Button fx:id="backBtn" mnemonicParsing="false" onAction="#customerScreenButton" text="Back" />
                </children>
             </HBox>
          </children>
