--- a/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
+++ b/src/main/resources/cordinus/cordinus_global/ReportScreen.fxml
@@ -1,28 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToggleGroup?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="581.0" prefWidth="1039.0" style="-fx-background-color: #C4A484; -fx-border-color: #000; -fx-border-width: 2px;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.ReportController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="581.0" prefWidth="1039.0" style="-fx-background-color: #C4A484; -fx-border-color: #000; -fx-border-width: 2px;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cordinus.cordinus_global.controller.ReportController">
    <children>
       <TabPane layoutX="21.0" layoutY="16.0" prefHeight="477.0" prefWidth="997.0" style="-fx-background-color: #000;" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab text="Appt Total(s)">
+          <Tab fx:id="apptTotalTitleTab" text="Appt Total(s)">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="506.0" prefWidth="998.0">
                      <children>
@@ -32,17 +18,17 @@
                                  <children>
                                     <ComboBox fx:id="TypeComboBox" layoutX="35.0" layoutY="259.0" onAction="#onActionFilter" prefWidth="150.0" />
                                     <TextField fx:id="apptTotals" disable="true" layoutX="36.0" layoutY="389.0" />
-                                    <Label layoutX="35.0" layoutY="7.0" prefHeight="17.0" prefWidth="149.0" text="Months:" textAlignment="CENTER" textFill="WHITE">
+                                    <Label fx:id="monthLbl" layoutX="35.0" layoutY="7.0" prefHeight="17.0" prefWidth="149.0" text="Months:" textAlignment="CENTER" textFill="WHITE">
                                        <font>
                                           <Font name="System Bold Italic" size="18.0" />
                                        </font>
                                     </Label>
-                                    <Label layoutX="36.0" layoutY="362.0" prefHeight="17.0" prefWidth="149.0" text="Totals:" textAlignment="CENTER" textFill="WHITE">
+                                    <Label fx:id="totalsLbl" layoutX="36.0" layoutY="362.0" prefHeight="17.0" prefWidth="149.0" text="Totals:" textAlignment="CENTER" textFill="WHITE">
                                        <font>
                                           <Font name="System Bold Italic" size="18.0" />
                                        </font>
                                     </Label>
-                                    <Label layoutX="36.0" layoutY="232.0" prefHeight="17.0" prefWidth="149.0" text="Type:" textAlignment="CENTER" textFill="WHITE">
+                                    <Label fx:id="typeLbl" layoutX="36.0" layoutY="232.0" prefHeight="17.0" prefWidth="149.0" text="Type:" textAlignment="CENTER" textFill="WHITE">
                                        <font>
                                           <Font name="System Bold Italic" size="18.0" />
                                        </font>
@@ -68,7 +54,7 @@
                      </children></AnchorPane>
             </content>
           </Tab>
-          <Tab text="Contact Schedule">
+          <Tab fx:id="fullTab" text="Contact Schedule">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="510.0" prefWidth="997.0" style="-fx-background-color: #000;">
                      <children>
@@ -77,45 +63,47 @@
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="448.0" prefWidth="134.0" style="-fx-background-color: #000;">
                                  <children>
                                     <ComboBox fx:id="ContactComboBox" layoutX="8.0" layoutY="33.0" prefHeight="25.0" prefWidth="133.0" />
-                                    <Label layoutX="8.0" layoutY="6.0" text="Select Contact " textFill="WHITE">
+                                    <Label fx:id="contactSelectLbl" layoutX="8.0" layoutY="6.0" text="Select Contact " textFill="WHITE">
                                        <font>
                                           <Font name="System Bold Italic" size="12.0" />
                                        </font>
                                     </Label>
                                  </children>
                               </AnchorPane>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #000;" />
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #000;">
+                                 <children>
+                                    <HBox alignment="CENTER" layoutX="216.0" layoutY="-36.0" prefHeight="100.0" prefWidth="399.0" spacing="10.0">
+                                       <children>
+                                          <RadioButton fx:id="AllRB" mnemonicParsing="false" onAction="#OnRadioButton" selected="true" text="All" textFill="WHITE">
+                                             <toggleGroup>
+                                                <ToggleGroup fx:id="ApptRB" />
+                                             </toggleGroup>
+                                          </RadioButton>
+                                          <RadioButton fx:id="MonthRB" mnemonicParsing="false" onAction="#OnRadioButton" text="Month" textFill="WHITE" toggleGroup="$ApptRB" />
+                                          <RadioButton fx:id="WeekRB" mnemonicParsing="false" onAction="#OnRadioButton" text="Week" textFill="WHITE" toggleGroup="$ApptRB" />
+                                          <RadioButton fx:id="AgendaRB" mnemonicParsing="false" onAction="#OnRadioButton" prefHeight="17.0" prefWidth="156.0" text="Full Agenda" textFill="WHITE" toggleGroup="$ApptRB" />
+                                       </children>
+                                    </HBox>
+                                 </children></AnchorPane>
                           </items>
                         </SplitPane>
                         <TableView fx:id="reportContactsTable" layoutX="178.0" layoutY="29.0" prefHeight="382.0" prefWidth="788.0" style="-fx-background-color: #313639;">
                            <columns>
                               <TableColumn fx:id="Appointment_ID" prefWidth="75.0" text="Appt. ID" />
-                              <TableColumn fx:id="Title" prefWidth="75.0" text="Title" />
-                              <TableColumn fx:id="Description" prefWidth="75.0" text="Description" />
-                              <TableColumn fx:id="Type" prefWidth="99.0" text="Type" />
-                              <TableColumn fx:id="Start" minWidth="8.0" prefWidth="132.0" text="Start" />
-                              <TableColumn fx:id="End" prefWidth="131.0" text="End" />
-                              <TableColumn fx:id="Customer_ID" prefWidth="96.0" text="Customer  ID" />
-                              <TableColumn fx:id="Contact_ID" prefWidth="104.0" text="Contact ID" />
+                              <TableColumn fx:id="Title" prefWidth="70.0" text="Title" />
+                              <TableColumn fx:id="Description" prefWidth="97.0" text="Description" />
+                              <TableColumn fx:id="Type" prefWidth="98.0" text="Type" />
+                              <TableColumn fx:id="Start" minWidth="8.0" prefWidth="127.0" text="Start" />
+                              <TableColumn fx:id="End" prefWidth="127.0" text="End" />
+                              <TableColumn fx:id="Customer_ID" prefWidth="98.0" text="Customer  ID" />
+                              <TableColumn fx:id="Contact_ID" prefWidth="95.0" text="Contact ID" />
                            </columns>
                         </TableView>
-                        <HBox alignment="CENTER" layoutX="415.0" layoutY="-36.0" prefHeight="100.0" prefWidth="339.0" spacing="10.0">
-                           <children>
-                              <RadioButton fx:id="AllRB" mnemonicParsing="false" onAction="#OnRadioButton" selected="true" text="All" textFill="WHITE">
-                                 <toggleGroup>
-                                    <ToggleGroup fx:id="ApptRB" />
-                                 </toggleGroup>
-                              </RadioButton>
-                              <RadioButton fx:id="MonthRB" mnemonicParsing="false" onAction="#OnRadioButton" text="Month" textFill="WHITE" toggleGroup="$ApptRB" />
-                              <RadioButton fx:id="WeekRB" mnemonicParsing="false" onAction="#OnRadioButton" text="Week" textFill="WHITE" toggleGroup="$ApptRB" />
-                              <RadioButton fx:id="AgendaRB" mnemonicParsing="false" onAction="#OnRadioButton" prefHeight="17.0" prefWidth="106.0" text="Full Agenda" textFill="WHITE" toggleGroup="$ApptRB" />
-                           </children>
-                        </HBox>
                      </children>
                   </AnchorPane>
             </content>
           </Tab>
-            <Tab text="Remaining Appointments">
+            <Tab fx:id="apptRemTitleTab" text="Remaining Appointments">
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
@@ -140,16 +128,15 @@
                               <TextField fx:id="halfPastTxt" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                               <TextField fx:id="quarterToTxt" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                               <TextField fx:id="hourTxt" disable="true" onAction="#remainingHours" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                              <Label prefHeight="17.0" prefWidth="189.0" text="Remaining 15 mins Appointments:" textFill="WHITE" GridPane.rowIndex="1" />
-                              <Label prefHeight="17.0" prefWidth="189.0" text="Remaining 30 mins Appointments:" textFill="WHITE" GridPane.rowIndex="3" />
-                              <Label prefHeight="17.0" prefWidth="189.0" text="Remaining 45 mins Appointments:" textFill="WHITE" GridPane.rowIndex="5" />
-                              <Label prefHeight="17.0" prefWidth="189.0" text="Remaining 60 mins Appointments:" textFill="WHITE" GridPane.rowIndex="7" />
+                              <Label fx:id="remFifteen" prefHeight="17.0" prefWidth="240.0" text="Remaining 15 mins Appointments:" textFill="WHITE" GridPane.rowIndex="1" />
+                              <Label fx:id="remThirty" prefHeight="17.0" prefWidth="252.0" text="Remaining 30 mins Appointments:" textFill="WHITE" GridPane.rowIndex="3" />
+                              <Label fx:id="remFortyFive" prefHeight="17.0" prefWidth="253.0" text="Remaining 45 mins Appointments:" textFill="WHITE" GridPane.rowIndex="5" />
+                              <Label fx:id="remSixty" prefHeight="17.0" prefWidth="244.0" text="Remaining 60 mins Appointments:" textFill="WHITE" GridPane.rowIndex="7" />
                            </children>
                         </GridPane>
-                        <HBox layoutX="338.0" layoutY="10.0" prefHeight="100.0" prefWidth="284.0">
+                        <HBox layoutX="306.0" layoutY="10.0" prefHeight="100.0" prefWidth="316.0">
                            <children>
-                              <Label prefHeight="46.0" prefWidth="164.0" text="Remaining Appointments for :" textAlignment="CENTER" textFill="WHITE" />
-                              <Label fx:id="currDateLbl" alignment="CENTER" prefHeight="48.0" prefWidth="65.0" text="Current Date" textFill="WHITE" />
+                              <Label fx:id="remTitle" prefHeight="46.0" prefWidth="314.0" text="Remaining Appointments for :" textAlignment="CENTER" textFill="WHITE" />
                            </children>
                         </HBox>
                         <HBox alignment="CENTER" layoutX="379.0" layoutY="60.0" prefHeight="45.0" prefWidth="225.0">
@@ -163,6 +150,6 @@
             </Tab>
         </tabs>
       </TabPane>
-      <Button layoutX="783.0" layoutY="507.0" mnemonicParsing="false" onAction="#mainMenuReturn" prefHeight="52.0" prefWidth="232.0" style="-fx-background-color: #C4A484; -fx-border-color: #000; -fx-border-radius: 5px;" text="Back to Main Menu" />
+      <Button fx:id="backBtn" layoutX="783.0" layoutY="507.0" mnemonicParsing="false" onAction="#mainMenuReturn" prefHeight="52.0" prefWidth="232.0" style="-fx-background-color: #C4A484; -fx-border-color: #000; -fx-border-radius: 5px;" text="Back to Main Menu" />
    </children>
 </AnchorPane>
